--- a/sass/core/_globals.scss
+++ b/sass/core/_globals.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
+
 section {
   padding-top: 150px;
   width: 100vw;
